2019-02-06  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/89182
	* gfortran.dg/graphite/pr89182.f90: New testcase.

2019-02-06  Jakub Jelinek  <jakub@redhat.com>

	PR c/89211
	* gcc.dg/pr89211.c: New test.

	PR middle-end/89210
	* c-c++-common/builtin-convertvector-2.c: New test.

2019-02-05  Nikhil Benesch  <nikhil.benesch@gmail.com>

        PR go/89019
        * lib/go-torture.exp: Test compiling with -flto.

2019-02-06  Joseph Myers  <joseph@codesourcery.com>

	PR c/88584
	* gcc.dg/redecl-18.c: New test.

2019-02-05  Jakub Jelinek  <jakub@redhat.com>

	PR c++/89187
	* g++.dg/opt/pr89187.C: New test.

2019-02-05  Andrea Corallo  <andrea.corallo@arm.com>

	* jit.dg/add-driver-options-testlib.c: Add support file for
	test-add-driver-options.c testcase.
	* jit.dg/all-non-failing-tests.h: Add note about
	test-add-driver-options.c
	* jit.dg/jit.exp (jit-dg-test): Update to support
	add-driver-options-testlib.c compilation.
	* jit.dg/test-add-driver-options.c: New testcase.

2019-02-05  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/11304
	* gcc.target/i386/call-1.c (set_eax): Add "eax" clobber.
	* gcc.target/i386/call-2.c: New test.

2019-02-05  Marek Polacek  <polacek@redhat.com>

	PR c++/89158 - by-value capture of constexpr variable broken.
	* g++.dg/cpp0x/lambda/lambda-89158.C: New test.

2019-02-05  Segher Boessenkool  <segher@kernel.crashing.org>

	* gcc.dg/vect/pr84711.c: Use -Wno-psabi.

2019-02-05  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/powerpc/vec-extract-sint128-1.c: Require int128 effective
	target.
	* gcc.target/powerpc/vec-extract-uint128-1.c: Likewise.

	PR target/89188
	* g++.dg/opt/pr89188.C: New test.

	PR rtl-optimization/89195
	* gcc.c-torture/execute/pr89195.c: New test.

2019-02-05  Kelvin Nilsen  <kelvin@gcc.gnu.org>

	* gcc.target/powerpc/vec-extract-slong-1.c: Require p8 execution
	hardware.
	* gcc.target/powerpc/vec-extract-schar-1.c: Likewise.
	* gcc.target/powerpc/vec-extract-sint128-1.c: Likewise.